--- a/views/404.hbs
+++ b/views/404.hbs
@@ -4,7 +4,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Page not found</title>
-    <link rel='icon' href='images/favicon.png' type='image/png' />
+    <link
+      rel='icon'
+      href='https://ik.imagekit.io/zv6i24c6s3s/favicon_r1Njk1ngG.png?updatedAt=1628935462371'
+      type='image/webp'
+    />
     <link rel='stylesheet' href='css/style.css' />
   </head>
   <body>
