--- a/views/404.hbs
+++ b/views/404.hbs
@@ -26,5 +26,13 @@
       defer
       src='https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js'
     ></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src='https://static.cloudflareinsights.com/beacon.min.js'
+      data-cf-beacon='{"token": "dd330abee9a24f5a9090cccd35df1e39"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
