--- a/views/404.hbs
+++ b/views/404.hbs
@@ -27,12 +27,14 @@
       src='https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js'
     ></script>
 
-    <!-- Cloudflare Web Analytics -->
     <script
-      defer
-      src='https://static.cloudflareinsights.com/beacon.min.js'
-      data-cf-beacon='{"token": "dd330abee9a24f5a9090cccd35df1e39"}'
+      async
+      src='https://www.googletagmanager.com/gtag/js?id=G-9HLYJ2460R'
     ></script>
-    <!-- End Cloudflare Web Analytics -->
+    <script>
+      window.dataLayer = window.dataLayer || []; function
+      gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config',
+      'G-9HLYJ2460R');
+    </script>
   </body>
 </html>
