--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,11 +1,15 @@
 <html lang='en'>
-  <head>
+  <head?>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Page not found</title>
-    <link rel='icon' href='./favicon.png' type='image/png' />
-    <link rel='stylesheet' href='./style.css' />
+    <link
+      rel='icon'
+      href='https://ik.imagekit.io/zv6i24c6s3s/favicon_r1Njk1ngG.png?updatedAt=1628935462371'
+      type='image/webp'
+    />
+    <link rel='stylesheet' href='css/style.css' />
   </head>
   <body>
     <lottie-player
@@ -23,7 +27,7 @@
       src='https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js'
     ></script>
 
-    {{! <script
+    {{!-- <script
       async
       src='https://www.googletagmanager.com/gtag/js?id=G-9HLYJ2460R'
     ></script>
@@ -31,6 +35,6 @@
       window.dataLayer = window.dataLayer || []; function
       gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config',
       'G-9HLYJ2460R');
-    </script> }}
+    </script> --}}
   </body>
 </html>
