--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,5 +1,5 @@
 <html lang='en'>
-  <head?>
+  <head>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
@@ -27,7 +27,7 @@
       src='https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js'
     ></script>
 
-    {{!-- <script
+    {{! <script
       async
       src='https://www.googletagmanager.com/gtag/js?id=G-9HLYJ2460R'
     ></script>
@@ -35,6 +35,6 @@
       window.dataLayer = window.dataLayer || []; function
       gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config',
       'G-9HLYJ2460R');
-    </script> --}}
+    </script> }}
   </body>
 </html>
