fea⚡  feat: did too much cheeky stuff

--- a/views/404.hbs
+++ b/views/404.hbs
@@ -27,7 +27,8 @@
       src='https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js'
     ></script>
 
-    {{! <script
+    {{! Analytics }}
+    <script
       async
       src='https://www.googletagmanager.com/gtag/js?id=G-9HLYJ2460R'
     ></script>
@@ -35,6 +36,7 @@
       window.dataLayer = window.dataLayer || []; function
       gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config',
       'G-9HLYJ2460R');
-    </script> }}
+    </script>
+    {{! Analytics END }}
   </body>
 </html>
